fixing some text align for footer

--- a/index.css
+++ b/index.css
@@ -303,6 +303,7 @@ a {
   font-size: 1.7rem;
   padding-right: 2rem;
   margin-top: 8rem;
+  text-align: center;
 }
 .contact-form {
   text-align: center;
@@ -313,6 +314,9 @@ a {
 }
 .contact-form h1 {
   font-size: 2.5rem;
+}
+.footer h2 {
+  text-align: center;
 }
 .contact-form input {
   background-color: rgb(12, 53, 143);
@@ -343,6 +347,7 @@ textarea:focus {
 ::placeholder {
   color: white;
 }
+
 /* .form-box {
 
   border-radius: 2rem;
