--- a/media.css
+++ b/media.css
@@ -55,7 +55,6 @@
       .contact-form {
         /* margin-top: 3rem; */
         margin: 1.3rem 0;
-        padding: 0;
       }
    
 }
